# gpr440

./: .gitignore
assignment1/: .clang-format  CMakeLists.txt
assignment1/src/: generation.c  generation.h  main.c  utils.h
assignment2/: .clang-format  CMakeLists.txt
assignment2/src/: grid.c  grid.h  main.c  styling.h
assignment2/src/gg/: camera.c  camera.h  grid.c  grid.h
